--- a/public/styleLogin.css
+++ b/public/styleLogin.css
@@ -3,7 +3,7 @@ body.login-page {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background: linear-gradient(135deg, #b57bff 0%, #9a63ff 40%, #cfa3ff 100%);
+    background: linear-gradient(135deg, #cbabf6 0%, #8a5be2 40%, #450489 100%);
     display: flex;
     justify-content: center;
     align-items: center;
